[gd_scene load_steps=10 format=2]

[ext_resource path="res://Textures/SplashScreen/solid_off_black.png" type="Texture" id=1]
[ext_resource path="res://Scenes/SettingsMenu/settings_menu.gd" type="Script" id=2]
[ext_resource path="res://Fonts/ThaleahFat_TTF.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://icon.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 3 )

[sub_resource type="ButtonGroup" id=4]

[sub_resource type="DynamicFont" id=5]
size = 32
font_data = ExtResource( 3 )

[node name="SettingsMenu" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioVbox" type="VBoxContainer" parent="UI"]
margin_left = 20.0
margin_top = 18.5431
margin_right = 175.548
margin_bottom = 153.543
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioLabel" type="Label" parent="UI/AudioVbox"]
margin_right = 155.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 1 )
text = "Audio"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MasterVolume" type="Label" parent="UI/AudioVbox"]
margin_top = 50.0
margin_right = 155.0
margin_bottom = 65.0
custom_fonts/font = SubResource( 2 )
text = "Master Volume"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MasterSlider" type="HSlider" parent="UI/AudioVbox/MasterVolume"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = -0.943695
margin_right = 220.0
min_value = -80.0
max_value = 6.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MasterCheckbox" type="CheckBox" parent="UI/AudioVbox/MasterVolume/MasterSlider"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.4523
margin_top = -3.5994
margin_right = 28.4523
margin_bottom = 5.4006
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicVolume" type="Label" parent="UI/AudioVbox"]
margin_top = 85.0
margin_right = 155.0
margin_bottom = 100.0
custom_fonts/font = SubResource( 2 )
text = "Music Volume"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicSlider" type="HSlider" parent="UI/AudioVbox/MusicVolume"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = -0.943695
margin_right = 220.0
min_value = -80.0
max_value = 6.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicCheckbox" type="CheckBox" parent="UI/AudioVbox/MusicVolume/MusicSlider"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.4523
margin_top = -3.5994
margin_right = 28.4523
margin_bottom = 5.4006
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SFXVolume" type="Label" parent="UI/AudioVbox"]
margin_top = 120.0
margin_right = 155.0
margin_bottom = 135.0
custom_fonts/font = SubResource( 2 )
text = "Sound Effects Volume"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SFXSlider" type="HSlider" parent="UI/AudioVbox/SFXVolume"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = -0.943695
margin_right = 220.0
min_value = -80.0
max_value = 6.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SFXCheckbox" type="CheckBox" parent="UI/AudioVbox/SFXVolume/SFXSlider"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.4523
margin_top = -3.5994
margin_right = 28.4523
margin_bottom = 5.4006
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GraphicsVbox" type="VBoxContainer" parent="UI"]
margin_left = 20.0
margin_top = 193.0
margin_right = 196.0
margin_bottom = 402.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GraphicsLabel" type="Label" parent="UI/GraphicsVbox"]
margin_right = 176.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 1 )
text = "Graphics"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quality" type="Label" parent="UI/GraphicsVbox"]
margin_top = 50.0
margin_right = 176.0
margin_bottom = 65.0
custom_fonts/font = SubResource( 2 )
text = "Quality"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionButton" type="OptionButton" parent="UI/GraphicsVbox/Quality"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 88.0
margin_bottom = 6.0
custom_fonts/font = SubResource( 3 )
group = SubResource( 4 )
text = "Graphics"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resolution" type="Label" parent="UI/GraphicsVbox"]
margin_top = 85.0
margin_right = 176.0
margin_bottom = 100.0
custom_fonts/font = SubResource( 2 )
text = "Resolution"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionButton" type="OptionButton" parent="UI/GraphicsVbox/Resolution"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.445435
margin_top = 0.445435
margin_right = 102.555
margin_bottom = 6.44543
custom_fonts/font = SubResource( 3 )
text = "Resolution"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fullscreen" type="Label" parent="UI/GraphicsVbox"]
margin_top = 120.0
margin_right = 176.0
margin_bottom = 135.0
custom_fonts/font = SubResource( 2 )
text = "FullSCreen"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FullscreenCheckBox" type="CheckBox" parent="UI/GraphicsVbox/Fullscreen"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -4.0
margin_top = -1.0
margin_right = 20.0
margin_bottom = 8.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="UI"]
anchor_left = 0.83
anchor_top = 0.867
anchor_right = 0.97
anchor_bottom = 0.956
margin_left = -0.200012
margin_right = 0.199951
custom_constants/separation = 150
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Apply" type="Button" parent="UI/HBoxContainer"]
visible = false
margin_right = 90.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 5 )
text = "Apply"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Reset" type="Button" parent="UI/HBoxContainer"]
margin_right = 90.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 5 )
text = "Reset"

[node name="BackButton" type="TextureButton" parent="UI"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -80.0
margin_top = 16.0
margin_right = 48.0
margin_bottom = 144.0
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="value_changed" from="UI/AudioVbox/MasterVolume/MasterSlider" to="." method="_on_MasterSlider_value_changed"]
[connection signal="toggled" from="UI/AudioVbox/MasterVolume/MasterSlider/MasterCheckbox" to="." method="_on_MasterCheckbox_toggled"]
[connection signal="value_changed" from="UI/AudioVbox/MusicVolume/MusicSlider" to="." method="_on_MusicSlider_value_changed"]
[connection signal="toggled" from="UI/AudioVbox/MusicVolume/MusicSlider/MusicCheckbox" to="." method="_on_MusicCheckbox_toggled"]
[connection signal="value_changed" from="UI/AudioVbox/SFXVolume/SFXSlider" to="." method="_on_SFXSlider_value_changed"]
[connection signal="toggled" from="UI/AudioVbox/SFXVolume/SFXSlider/SFXCheckbox" to="." method="_on_SFXCheckbox_toggled"]
[connection signal="toggled" from="UI/GraphicsVbox/Fullscreen/FullscreenCheckBox" to="." method="_on_FullScreenCheckBox_toggled"]
[connection signal="pressed" from="UI/HBoxContainer/Reset" to="." method="_on_Reset_pressed"]
